chore: update docs

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # ❗For simplicity, we've left the .env committed.
-# In a production environment, we recommend storing these in environment variables.
+# In a production environment, `.env` should not be committed.
 
 # Session (TOTP) - Required
 SESSION_SECRET=REPLACE_WITH_YOUR_SESSION_SECRET
